Add packaging for ubuntu and centos

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -515,3 +515,21 @@ if(ENABLE_LIB_ONLY_DISABLED_OTHERS)
   message("Only the library will be built. To build other components "
     "(such as applications and examples), set ENABLE_LIB_ONLY=OFF.")
 endif()
+
+set(CPACK_PACKAGE_VERSION_MAJOR 1)
+set(CPACK_PACKAGE_VERSION_MINOR 41)
+if(NOT DEFINED CPACK_PACKAGE_VERSION_PATCH)
+    message("CPACK_PACKAGE_VERSION_PATCH not defined")
+    message("Will use default 0 patch version")
+    set(CPACK_PACKAGE_VERSION_PATCH "0")
+endif()
+set(VERSION "${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")
+set(CPACK_PACKAGE_VERSION ${VERSION})
+set(CPACK_PACKAGE_NAME "nghttp2")
+set(CPACK_PACKAGE_CONTACT "https://nghttp2.org")
+set(CPACK_PACKAGE_VENDOR "nghttp2")
+set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "HTTP/2 C Library")
+set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}.${CMAKE_SYSTEM_PROCESSOR}")
+include(cmake/Packaging.cmake)
+generatePackageTargets()
+include(CPack)
